authz configuration edits